--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,4 +4,5 @@ include: package:flutter_lints/flutter.yaml
 linter:
   rules:
     constant_identifier_names: false
-
+    unnecessary_new: false
+    unnecessary_this: false
