--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   retrofit: 3.0.1
+  pretty_dio_logger: ^1.1.1
   get: ^4.6.1
   dio: ^4.0.4
   pull_to_refresh: ^2.0.0
