--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   marquee: ^2.2.0
   sqflite: ^2.0.1
 
+  web_socket_channel: ^2.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
