--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,7 @@ dependencies:
   flutter_svg: ^1.0.0
   marquee: ^2.2.0
   sqflite: ^2.0.1
-
-  web_socket_channel: ^2.1.0
+  font_awesome_flutter: ^9.2.0
 
 dev_dependencies:
   flutter_test:
