--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,18 +18,18 @@ dependencies:
   get: ^4.6.1
   dio: ^4.0.4
   pull_to_refresh: ^2.0.0
-  device_info: ^2.0.3
-  dart_ipify: ^1.1.1
+#  device_info: ^2.0.3
+#  dart_ipify: ^1.1.1
   shared_preferences: ^2.0.11
   firebase_messaging: ^11.2.4
   firebase_core: ^1.10.6
   intl: ^0.17.0
   flutter_local_notifications: ^9.1.5
-  package_info_plus: ^1.0.6
+#  package_info_plus: ^1.0.6
   firebase_remote_config: ^1.0.3
   flutter_svg: ^1.0.0
-  marquee: ^2.2.0
-  sqflite: ^2.0.1
+#  marquee: ^2.2.0
+#  sqflite: ^2.0.1
   font_awesome_flutter: ^9.2.0
 #  flutter_launcher_icons: ^0.9.2
 
