update core function

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.2
   retrofit: 3.0.1
   pretty_dio_logger: ^1.1.1
@@ -48,14 +50,14 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
-
-  fonts:
-    - family: Rokkitt
-      fonts:
-        - asset: assets/fonts/Rokkitt-Bold.ttf
-          style: bold
-        - asset: assets/fonts/Rokkitt-Medium.ttf
-          style: medium
+#
+#  fonts:
+#    - family: Rokkitt
+#      fonts:
+#        - asset: assets/fonts/Rokkitt-Bold.ttf
+#          weight: 800
+#        - asset: assets/fonts/Rokkitt-Medium.ttf
+#          weight: 500
 #flutter_icons:
 #  android: true
 #  ios: true
