--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 #  sqflite: ^2.0.1
   font_awesome_flutter: ^9.2.0
 #  flutter_launcher_icons: ^0.9.2
+  dotted_decoration: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -49,7 +50,6 @@ flutter:
 
   assets:
     - assets/icons/
-    - assets/images/
 #
 #  fonts:
 #    - family: Rokkitt
